fares travel hub changes domain mapped to is airlinebooking.live

--- a/html/farestravelhub-com/contact-us.html
+++ b/html/farestravelhub-com/contact-us.html
@@ -35,7 +35,7 @@
     <nav class="navbar navbar-expand-lg navbar-light secondary-color">
         <div class="container" id="navContainer">
             <a class="navbar-brand" href="#">
-                <img src="img/farestravelhub/logo.png" class="img-fluid" alt="Fares Travel Hub">
+                <img src="img/farestravelhub/logo.png" class="img-fluid" alt="Fares travel hub">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,11 +46,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="about-us.html">About Us<span class="sr-only">(current)</span></a>
-                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact-us.html">Contact Us</a>
+                        <a class="nav-link" href="about-us.html">About Us</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="contact-us.html">Contact Us<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
@@ -58,25 +58,24 @@
     </nav>
 </header>
 <main>
-    <div class="container-fluid" id="intro" style="min-height: 250px !important;">
+    <div class="container-fluid" id="intro" style="min-height: 300px !important;">
         <div class="container text-center custom-container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="header">About Us</h1>
+                    <h1 class="header">Contact Us</h1>
+                </div>
+                <div class="col-md-12">
+                    <a class="btn call-btn number-replace" href="tel:18663701007">1 (866) 370-1007</a>
                 </div>
             </div>
         </div>
     </div>
     <hr class="hr-light">
     <div class="container" id="aboutUsContainer">
-        <h1 class="header">About Us</h1>
-        <p class="body">
-            At <a href="https://farestravelhub.com/">Farestravelhub.com</a> we are committed to finding the best deals
-            for both international and domestic
-            travelers. Our flight reservation desk is here around the clock to assist you with all your flight
-            arrangements. So, whether you’re booking a flight, making a change to your booking, or cancelling
-            altogether, you can always rely on farestravelhub.com to help you save money on your next trip.
-        </p>
+        <h1 class="header">Need Help? We are here to assist you 24/7!</h1>
+        <p class="font-weight-bold">To make a new flight reservation, changes or cancellations please call:
+            <a class="number-replace parah-link">1 (844) 968-2124</a></p>
+
         <div class="row text-center">
             <div class="col-md-4">
                 <!-- Card -->
@@ -153,65 +152,6 @@
         </div>
     </div>
     <hr class="hr-light">
-
-    <div class="container" id="aboutUsContentContainer">
-        <div class="d-flex flex-row">
-            <span></span>
-            <h1 class="header">Farestravelhub</h1>
-            <span></span>
-        </div>
-        <div class="row no-gutters">
-            <div class="col-md-6 right-margin">
-                <div class="container-fluid">
-                    <img src="img/farestravelhub/about-us-airplane-1280.jpg" class="img-fluid" alt="Airplane">
-                </div>
-            </div>
-            <div class="col-md-6 left-margin z-index-5 margin-top">
-                <div class="container-fluid about-us-blue">
-                    <p>Our search engine will provide you with all the necessary information about travel discounts. We
-                        have an incredible selection of airline connections and strong relationships man airline
-                        companies such as Southwest, JetBlue, Spirit, etc., to provide you with the best discounts for
-                        flight tickets. You can also take advantage of our exclusive deals on international travel. If
-                        you are frequently flying, you will fall in love with Airline Travel Support as we will provide
-                        exclusive deals just for you. We will simply need you to provide us with the necessary
-                        information about your travels – date, time, destination and class type so we can make all the
-                        needed arrangements on your behalf.</p>
-                    <p>You can always rely on our team to support you throughout your travels. Contact us if you feel
-                        busy, unable or just nervous to follow up issues with carriers. Just leave everything to us. Our
-                        team of professionals will resolve all your issues as soon as possible. We will take the stress
-                        of contacting the airline company off your shoulders. We will handle it for you whether you just
-                        have a query, an issue with your airline, or you simply want to make a change to your booking.
-                        You can always rely on Airline Travel Support to deal with all your issues.</p>
-                </div>
-            </div>
-        </div>
-        <hr class="hr-light">
-        <div class="row no-gutters">
-            <div class="col-md-6 right-margin margin-top z-index-5">
-                <div class="container-fluid about-us-blue">
-                    <p>Our customer support is on the line day and night, so do not hesitate to contact us whether it is
-                        early in the morning or late at night. We are committed to providing you with support, and this
-                        is our top priority. Our team of experts aims to ensure every single one of our customers is
-                        satisfied with our services and have a fantastic travelling experience.
-                    </p>
-                    <p>
-                        Welcome to <b>FARESTRAVELHUB.COM</b>, where we can offer you the best agreements for both
-                        domestic and international travellers. Our company works day-and-night to plan all your flight
-                        arrangements. You can trust farestravelhub.com whether you are booking a flight, making a change
-                        to your booking or cancelling it. We guarantee you will save a lot of money with our services.
-                    </p>
-                </div>
-            </div>
-            <div class="col-md-6 left-margin">
-                <div class="container-fluid">
-                    <img src="img/farestravelhub/popular-dest/golden-gate-bridge-1280.jpg" class="img-fluid" alt="San Francisco">
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <hr class="hr-light">
-
     <div class="container-fluid" id="end">
         <div class="container text-center custom-container">
             <div class="row">
@@ -219,8 +159,7 @@
                     <h1 class="header">24x7 Support</h1>
                 </div>
                 <div class="col-md-12">
-                    <p class="body">Make reservation from anywhere in the world. Call us 24/7 for advanced
-                        reservation.</p>
+                    <p class="body">Make reservation from anywhere in the world. Call us 24/7 for advanced reservation.</p>
                 </div>
                 <div class="col-md-12">
                     <a class="btn call-btn number-replace" href="tel:18663701007">1 (866) 370-1007</a>
@@ -238,7 +177,7 @@
             any description or information, which includes but is not limited to price and other information.
         </p>
         <p class="text-left">
-            At farestravelhub.com's discretion, any item of information may be edited or modified. This website
+            At Farestravelhub.com's discretion, any item of information may be edited or modified. This website
             will give customers the option to either continue with their current reservation at the current rate
             or cancel their reservation with no cancellation fees if a published pricing is incorrect.
         </p>
@@ -251,12 +190,13 @@
 <!-- Modal: Call Us Modal Dialog-->
 <div class="modal fade right" id="modalCallUs" tabindex="-1" role="dialog" aria-labelledby="modalCallUsLabel"
      aria-hidden="true" data-backdrop="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg modal-notify modal-danger" role="document" id="modalCallUsLabel">
+    <div class="modal-dialog-full-width modal-dialog modal-dialog-centered modal-lg modal-notify" role="document"
+         id="modalCallUsLabel">
         <!--Content-->
-        <div class="modal-content">
+        <div class="modal-content-full-width modal-content">
             <!--Header-->
-            <div class="modal-header">
-                <p class="heading">Exclusive Flight Deals</p>
+            <div class="modal-header-full-width modal-header text-center">
+                <p class="heading w-100">Contact Us</p>
 
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true" class="white-text">&times;</span>
@@ -267,46 +207,31 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="text-uppercase font-weight-bold text-center header">
-                            <p class="text-success font-weight-bold">Call us Now!!</p>
-                            <p class="text-center">
-                                <i class="fas fa-arrow-down fa-2x border-modal-success animated slow rotateInDownLeft"></i>
-                            </p>
+                        <div class="header">
+                            <p class="unique-color-text">Airline Reservations</p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 d-flex justify-content-center">
-                        <img src="img/farestravelhub/cust-supp/cust-supp-1.png" class="img-modal"
-                             alt="Customer Support">
-                    </div>
-                </div>
-                <div class="row">
                     <div class="col-md-12">
-                        <div class="text-uppercase font-weight-bold text-center header">
-                            <p class="p-odd">Airline reservations</p>
+                        <div class="header">
+                            <p class="p-odd">Contact  Us</p>
+                            <p><a class="btn call-btn number-replace"
+                                  href="tel:18663701007">1 (866) 370-1007</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
                         <p class="text-center">
-                            <i class="fas fa-phone fa-4x fa-rotate-90 modal-border"></i></p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12 text-uppercase font-weight-bold text-center header">
-                        <p class="p-even">Exclusive phone deals</p>
+                            <i class="fas fa-phone fa-3x fa-rotate-90 modal-border"></i></p>
                     </div>
                 </div>
             </div>
 
             <!--Footer-->
-            <div class="modal-footer justify-content-center">
-                <a class="btn btn-danger btn-danger-hover link-replace" href="tel:18008008734">
-                    <i class="fas fa-phone fa-rotate-90"></i>
-                    <span>Call Us</span>
-                </a>
+            <div class="modal-footer-full-width modal-footer justify-content-center">
+                <p class="white-text">Booking, Reservation, Cancellation, Inquiry</p>
             </div>
         </div>
         <!--/.Content-->
