--- a/html/farestravelhub-com/terms.html
+++ b/html/farestravelhub-com/terms.html
@@ -150,12 +150,13 @@
 <!-- Modal: Call Us Modal Dialog-->
 <div class="modal fade right" id="modalCallUs" tabindex="-1" role="dialog" aria-labelledby="modalCallUsLabel"
      aria-hidden="true" data-backdrop="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg modal-notify modal-danger" role="document" id="modalCallUsLabel">
+    <div class="modal-dialog-full-width modal-dialog modal-dialog-centered modal-lg modal-notify" role="document"
+         id="modalCallUsLabel">
         <!--Content-->
-        <div class="modal-content">
+        <div class="modal-content-full-width modal-content">
             <!--Header-->
-            <div class="modal-header">
-                <p class="heading">Exclusive Flight Deals</p>
+            <div class="modal-header-full-width modal-header text-center">
+                <p class="heading w-100">Contact Us</p>
 
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true" class="white-text">&times;</span>
@@ -166,46 +167,31 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="text-uppercase font-weight-bold text-center header">
-                            <p class="text-success font-weight-bold">Call us Now!!</p>
-                            <p class="text-center">
-                                <i class="fas fa-arrow-down fa-2x border-modal-success animated slow rotateInDownLeft"></i>
-                            </p>
+                        <div class="header">
+                            <p class="unique-color-text">Airline Reservations</p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 d-flex justify-content-center">
-                        <img src="img/farestravelhub/cust-supp/cust-supp-1.png" class="img-modal"
-                             alt="Customer Support">
-                    </div>
-                </div>
-                <div class="row">
                     <div class="col-md-12">
-                        <div class="text-uppercase font-weight-bold text-center header">
-                            <p class="p-odd">Airline reservations</p>
+                        <div class="header">
+                            <p class="p-odd">Contact  Us</p>
+                            <p><a class="btn call-btn number-replace"
+                                  href="tel:18663701007">1 (866) 370-1007</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
                         <p class="text-center">
-                            <i class="fas fa-phone fa-4x fa-rotate-90 modal-border"></i></p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12 text-uppercase font-weight-bold text-center header">
-                        <p class="p-even">Exclusive phone deals</p>
+                            <i class="fas fa-phone fa-3x fa-rotate-90 modal-border"></i></p>
                     </div>
                 </div>
             </div>
 
             <!--Footer-->
-            <div class="modal-footer justify-content-center">
-                <a class="btn btn-danger btn-danger-hover link-replace" href="tel:18008008734">
-                    <i class="fas fa-phone fa-rotate-90"></i>
-                    <span>Call Us</span>
-                </a>
+            <div class="modal-footer-full-width modal-footer justify-content-center">
+                <p class="white-text">Booking, Reservation, Cancellation, Inquiry</p>
             </div>
         </div>
         <!--/.Content-->
